<resources>
    <string name="app_name">IoT Smart Lock</string>
    <string name="refresh">Atualizar</string>
    <string name="edit">Editar</string>
    <string name="delete">Excluir</string>
    <string name="nome">Nome</string>
    <string name="descricao">Descrição</string>
    <string name="dtatualizacao">Última iteração em</string>
    <string name="mqttid">MQTT ID</string>
    <string name="installation_status">Instalação</string>
    <string name="lock_status">Trava</string>
    <string name="alarm_status">Alarme</string>
    <string name="add_node_btn">Adicionar Instalação</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Senha</string>
    <string name="login_button">LOGIN</string>
    <string name="sign_up">REGISTRAR-SE</string>
    <string name="no_text"> </string>
    <string name="sign_up_button">REGISTRAR-SE</string>
    <string name="log_in">LOGIN</string>
    <string name="trava">Trava</string>
    <string name="alarme">Alarme</string>
    <string name="chartBtn">Gráficos</string>
    <string name="reportBtn">Relatórios</string>
    <string name="saveBtn">SALVAR</string>
    <string name="nameText">Nome da instalação:</string>
    <string name="nameHint">Dê um nome para sua instaçação</string>
    <string name="descriptionText">Descrição:</string>
    <string name="descriptionHint">Descreva sua instalação</string>
    <string name="mqttText">MQTT ID:</string>
    <string name="mqttIdHint">Tópico MQTT</string>
    <string name="chart1">Qtde de vezes aberta (hoje)</string>
    <string name="chart2">Qtde de vezes aberta no mês (por dia)</string>
    <string name="chart3">Qtde de vezes aberta no ano (por mês)</string>
    <string name="report1">Relat. de aberturas da instalação</string>
    <string name="report2">Relat. de disparos do alarme</string>
    <string name="report3">Relat. de momentos esquecida aberta</string>
</resources>
