<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/empty"
        android:title="@string/chartBtn"
        android:orderInCategory="101"
        app:showAsAction="always"
        android:icon="@android:drawable/ic_menu_more">

        <menu>
        <item
            android:id="@+id/action_chart1"
            android:orderInCategory="1"
            android:title="@string/chart1"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/action_chart2"
            android:orderInCategory="2"
            android:title="@string/chart2"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/action_chart3"
            android:orderInCategory="3"
            android:title="@string/chart3"
            app:showAsAction="ifRoom" />
        </menu>
    </item>
</menu>