<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/empty"
        android:title="@string/reportBtn"
        android:orderInCategory="101"
        app:showAsAction="always"
        android:icon="@android:drawable/ic_menu_more">

        <menu>
            <item
                android:id="@+id/action_report1"
                android:orderInCategory="1"
                android:title="@string/report1"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/action_report2"
                android:orderInCategory="2"
                android:title="@string/report2"
                app:showAsAction="ifRoom" />
            <item
                android:id="@+id/action_report3"
                android:orderInCategory="3"
                android:title="@string/report3"
                app:showAsAction="ifRoom" />
        </menu>
    </item>
</menu>