<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="gustavogr.iotsmartlock.Activity.SignUpActivity"
    android:background="@color/background">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="250px"
        android:layout_height="125dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/logo"
        android:textColor="@color/colorAccent"
        android:text="@string/no_text"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_below="@+id/login_error"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bottom_border"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@color/colorBlack"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        tools:layout_editor_absoluteX="0dp"
        tools:ignore="MissingConstraints"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_below="@+id/email"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bottom_border"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@color/colorBlack"
        app:layout_constraintTop_toBottomOf="@+id/email"
        tools:layout_editor_absoluteX="0dp"
        tools:ignore="MissingConstraints"/>

    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:backgroundTint="@color/colorRed"
        android:text="@string/sign_up_button"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/password"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/register"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/log_in"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register"
        app:layout_constraintVertical_bias="0.263" />

</android.support.constraint.ConstraintLayout>