<?xml version="1.0" encoding="utf-8"?>
<!-- Criação do layout -->
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="gustavogr.iotsmartlock.Activity.NodeActivity"
    android:background="@color/background">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="24dp"
        android:contentDescription="image"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="h,16:9"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@drawable/default_device"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/node_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/nome"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@+id/imageView"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/node_descricao"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/descricao"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/node_nome"
        app:layout_constraintRight_toRightOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/node_nome"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintTop_creator="1" />

    <View
        android:layout_width="82dp"
        android:layout_height="70dp"
        android:layout_marginTop="94dp"
        android:background="@color/colorPrimary"
        app:layout_constraintHorizontal_bias="0.261"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <View
        android:layout_width="82dp"
        android:layout_height="70dp"
        android:layout_marginTop="94dp"
        android:background="@drawable/button_border"
        app:layout_constraintHorizontal_bias="0.261"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Switch
        android:id="@+id/node_switchLockBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="changeLockStatus"
        android:textOff="1"
        android:textOn="0"
        app:layout_constraintTop_toBottomOf="@+id/node_descricao"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/node_switchAlarmBtn"
        tools:layout_constraintBottom_creator="1" />

    <TextView
        android:id="@+id/node_lock_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Trava"
        android:textSize="24sp"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/node_switchLockBtn"
        tools:layout_constraintTop_creator="1" />

    <View
        android:layout_width="84dp"
        android:layout_height="72dp"
        android:layout_marginTop="94dp"
        android:background="@color/colorPrimary"
        app:layout_constraintHorizontal_bias="0.725"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <View
        android:layout_width="84dp"
        android:layout_height="72dp"
        android:layout_marginTop="94dp"
        android:background="@drawable/button_border"
        app:layout_constraintHorizontal_bias="0.725"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Switch
        android:id="@+id/node_switchAlarmBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="changeAlarmStatus"
        android:textOff="0"
        android:textOn="1"
        app:layout_constraintTop_toBottomOf="@+id/node_descricao"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/node_switchLockBtn"
        tools:layout_constraintBottom_creator="1"/>

    <TextView
        android:id="@+id/node_alarm_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Alarme"
        android:textSize="24sp"
        app:layout_constraintHorizontal_bias="0.72"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/node_switchAlarmBtn"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/node_installation_status"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="70dp"
        android:text="@string/installation_status"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/node_descricao"
        app:layout_constraintRight_toRightOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/node_descricao"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/node_mqttid"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/mqttid"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/node_installation_status"
        app:layout_constraintRight_toRightOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/node_installation_status"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintTop_creator="1" />

    <TextView
        android:id="@+id/node_dtatualizacao"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/dtatualizacao"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="@+id/node_mqttid"
        app:layout_constraintRight_toRightOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/node_mqttid"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintTop_creator="1" />

    <Button
        android:id="@+id/chartBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="Dashboards"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

</android.support.constraint.ConstraintLayout>
